# VoltageHub

./: .env.example  .gitignore  .sqlfluff  CHANGELOG.md  LICENSE  Makefile  README.md  README_zh.md  docker-compose.yml  pyproject.toml
.github/workflows/: dbt_compile.yml  lint.yml  terraform_validate.yml
DOCS/: AGENTS.md  ARCHITECTURE.md  INTERFACES.md  MCP.md  SETUP.md  SETUP_zh.md  SPEC.md  TASKS.md  TESTING.md
DOCS/Docs_zh/: README_zh.md  SETUP_zh.md  SPEC_zh.md
airflow/dags/: eia_grid_batch.py  eia_grid_batch_tasks.py
airflow/schemas/: raw_eia_batch.json
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/aggregates/: agg_generation_mix.sql  agg_load_daily.sql  agg_load_hourly.sql  agg_top_regions.sql  schema.yml
dbt/models/marts/core/: dim_energy_source.sql  dim_region.sql  fct_grid_metrics.sql  schema.yml
dbt/models/meta/: schema.yml
dbt/models/staging/: schema.yml  stg_grid_metrics.sql
docker/: Dockerfile  docker-compose.yml
mcp/: pyproject.toml
mcp/app/: __init__.py  main.py
mcp/app/adapters/: __init__.py  voltagehub.py
mcp/app/config/: __init__.py  runtime.py  settings.py
mcp/app/resources/: __init__.py
mcp/app/tools/: __init__.py
mcp/tests/: test_server_startup.py  test_settings.py  test_stdio_e2e.py  test_voltagehub_adapter.py
serving-fastapi/: Dockerfile  pyproject.toml
serving-fastapi/app/: __init__.py  main.py
serving-fastapi/app/cache/: __init__.py  query_cache.py
serving-fastapi/app/config/: __init__.py  bigquery.py  settings.py
serving-fastapi/app/exceptions/: __init__.py  base.py  handlers.py
serving-fastapi/app/health/: __init__.py  service.py
serving-fastapi/app/middleware/: __init__.py  request_logging.py
serving-fastapi/app/repositories/: __init__.py  base.py  control_plane.py  metrics.py
serving-fastapi/app/routers/: __init__.py  control_plane.py  health.py  metrics.py
serving-fastapi/app/schemas/: common.py  control_plane.py  error.py  metrics.py
serving-fastapi/app/services/: __init__.py  control_plane.py  metrics.py
sqlfluff_libs/: .sqlfluff.ci  dbt_utils.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: rest_api_latency_benchmark.py
tests/fixtures/: eia_response.json
tests/integration/: test_pipeline_e2e.py  test_serving_api.py
tests/unit/: test_bigquery_client.py  test_dbt_testing_contracts.py  test_eia_grid_batch_tasks.py
tests/unit/serving_fastapi/: test_control_plane.py  test_metrics.py  test_settings.py
voltage_hub_core/: __init__.py  bigquery.py  cache.py  exceptions.py  repositories.py  schemas.py  services.py
