[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voltagehub-mcp"
version = "0.1.0"
description = "Voltage Hub MCP stdio server"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=5.5.2",
    "google-cloud-bigquery>=3.40.1",
    "mcp>=1.12.0",
    "pydantic>=2.11.3",
]

[project.scripts]
voltagehub-mcp = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"../voltage_hub_core" = "voltage_hub_core"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [".", ".."]
